# ai-agent-orchestrator

./: .coveragerc  .env.example  .env.production.example  .env.staging.example  .gitignore  ADDING_AGENTS.md  AI_ENGINEERING_PATH.md  ARCHITECTURE.md  AUDIT_FIXES_SUMMARY.md  AWS_INFRASTRUCTURE_ANALYSIS.md  AWS_INFRASTRUCTURE_REVIEW.md  CHANGELOG.md  CHATBOT_SETUP.md  CODE_AUDIT_REPORT.md  CODE_OF_CONDUCT.md  CODE_REVIEW_AGENT_ANALYSIS.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_INTEGRATION.md  DEPLOYMENT_K8S.md  DEX_MVP.md  Dockerfile  ENTERPRISE_READINESS.md  EXISTING_INFRASTRUCTURE_ANALYSIS.md  FINAL_AUDIT_SUMMARY.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_VERIFICATION.md  INTEGRATION_GUIDE.md  LICENSE  LICENSE_INFO.md  MONITORING.md  OPERATIONS.md  OpenDEX_QUICKSTART.md  PRE_PUSH_CHECKLIST.md  PRODUCTION_GAPS.md  PRODUCTION_IMPLEMENTATION_COMPLETE.md  PRODUCTION_READINESS.md  PRODUCTION_REMAINING.md  PRODUCTION_ROADMAP.md  QUALITY_SUGGESTIONS.md  (+21 more)
.claude/: settings.local.json
.github/: CODEOWNERS  RELEASE_TEMPLATE.md  pull_request_template.md
alembic/: env.py
app/: __init__.py  main.py  worker.py
cloudformation/: orchestrator-stack.yaml
config/: agent_profiles.yaml  agents.yaml  alertmanager.yml  dex_remediation_map.yaml  llm.yaml  mcp_servers.yaml  prometheus-alerts.yml  prometheus.yml  run_templates.yaml
docs/: API_VERSIONING.md  BRANCH_PROTECTION.md  DISASTER_RECOVERY.md  OPERATIONS.md  ORCHESTRATION.md  PRODUCTION_EXECUTION_PLAN_30D.md  SECRET_ROTATION.md  TODO_TRACKING.md
examples/: backend-proxy-node.js  backend-proxy-python.py  console.html  frontend-chatbot.js
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  migration-job.yaml  namespace.yaml  networkpolicy.yaml  pdb.yaml  postgres.yaml  pvc.yaml  rbac.yaml  secret.yaml.example  service.yaml
opendex/: prometheus.yml
playbooks/: README.md  inventory.yml  ping.yml  restart_service.yml
(+232 files in other folders)
